# tpmnt

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  flake.nix  gpg.key  index.html  release-plz.toml  tpmnt.repo
.github/workflows/: ci.yml  release-plz.yml  release.yml
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages  Release
dists/stable/main/binary-arm64/: Packages  Release
docs/: packaging.md
man/: tpmnt.1
packaging/: README.md
packaging/aur/: .SRCINFO  PKGBUILD  README.md
packaging/aur/tpmnt-bin/: .SRCINFO  PKGBUILD
packaging/copr/: README.md  make-srpm.sh  tpmnt.spec
packaging/nix/: README.md  package.nix
packaging/ppa/: README.md  build-source.sh
packaging/ppa/debian/: changelog  control  copyright  rules
packaging/ppa/debian/source/: options
pool/main/t/tpmnt/: tpmnt_0.3.2-1_amd64.deb  tpmnt_0.3.2-1_arm64.deb
rpm/: tpmnt-aarch64-unknown-linux-gnu.rpm  tpmnt-x86_64-unknown-linux-gnu.rpm
rpm/repodata/: 1001179f5ba291d57187ff576752e4dec70d5cc5db97d2e2fe4360d4b50d15c4-primary.sqlite.bz2  1755dba9fb5518a4eeaad9c054d6f3eea12ee81e711ead7872e05d29043cef7a-other.sqlite.bz2  cfab83a636154504275b4daa3e5f66b1d8758bb6f25780653e233321754d436c-filelists.sqlite.bz2  repomd.xml  repomd.xml.asc
src/: blockdev.rs  cli.rs  config.rs  discover.rs  env.rs  error.rs  exec.rs  keystore.rs  luks.rs  main.rs  manage.rs  paths.rs  pin.rs  power.rs  reconcile.rs  remote_state.rs  secret.rs  tui.rs  vault.rs
src/cmd/: adopt.rs  apply.rs  connect.rs  destroy.rs  detach.rs  discover.rs  enroll.rs  init.rs  migrate.rs  mod.rs  mount_remote.rs  offline.rs  pin.rs  power.rs  recover.rs  remote.rs  rename.rs  rollback.rs  status.rs  toggle.rs  vault.rs
