[package]
name = "tpmnt"
version = "0.3.0"
edition = "2021"
description = "Unified, declarative, AI-native CLI for LUKS2 + TPM2 enroll-once auto-decrypt and auto-mount"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Meeks233/tpmnt"
readme = "README.md"
keywords = ["luks2", "tpm2", "cryptsetup", "encryption", "systemd"]
categories = ["command-line-utilities"]

[[bin]]
name = "tpmnt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_mangen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
strip = true
lto = true

[package.metadata.deb]
maintainer = "tpmnt maintainers"
copyright = "2026, tpmnt maintainers"
license-file = ["LICENSE-MIT", "0"]
extended-description = "tpmnt unifies LUKS2 + TPM2 enrollment, declarative crypttab/fstab/systemd mount reconciliation, key escrow, and remote sshfs mounts into one AI-native CLI."
# Depends = core enroll→unlock→mount, default cold-standby spindown (hdparm), and
# the mandatory PIN vault (gnupg). Recommends = feature-specific tools. Suggests =
# only-when-serving-as-a-remote / alternate transport. Debian package names.
depends = "$auto, cryptsetup, systemd, util-linux, gdisk, btrfs-progs, hdparm, gnupg, sudo"
recommends = "sg3-utils, xfsprogs, e2fsprogs, parted, procps, openssh-client, sshfs, fuse3, nbd-client, udisks2, dmsetup, age"
suggests = "qemu-utils, nvme-cli"
section = "admin"
priority = "optional"
assets = [
    ["target/release/tpmnt", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/tpmnt/README.md", "644"],
    ["man/tpmnt.1", "usr/share/man/man1/tpmnt.1", "644"],
]

# RPM (Fedora/RHEL/openSUSE, dnf/zypper) — built by cargo-generate-rpm on tagged
# releases. Shared-lib auto-requires are disabled (glibc is always present); the
# lists below are the runtime *tools* tpmnt orchestrates, by Fedora package name.
# Requires = core enroll→unlock→mount + default cold-standby spindown (hdparm) +
# mandatory PIN vault (gnupg2). Recommends = feature-specific tools (remote NBD/
# sshfs, xfs/ext4 filesystems, USB spindown via sg3_utils, udisks power-off).
[package.metadata.generate-rpm]
summary = "Unified, declarative CLI for LUKS2 + TPM2 enroll-once auto-decrypt and auto-mount"
assets = [
    { source = "target/release/tpmnt", dest = "/usr/bin/tpmnt", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/tpmnt/README.md", mode = "644", doc = true },
    { source = "man/tpmnt.1", dest = "/usr/share/man/man1/tpmnt.1", mode = "644", doc = true },
]

[package.metadata.generate-rpm.requires]
cryptsetup = "*"
systemd = "*"
util-linux = "*"
gdisk = "*"
btrfs-progs = "*"
hdparm = "*"
gnupg2 = "*"
sudo = "*"

[package.metadata.generate-rpm.recommends]
sg3_utils = "*"
xfsprogs = "*"
e2fsprogs = "*"
parted = "*"
procps-ng = "*"
openssh-clients = "*"
fuse-sshfs = "*"
fuse3 = "*"
nbd = "*"
udisks2 = "*"
device-mapper = "*"
age = "*"

[package.metadata.generate-rpm.suggests]
qemu-img = "*"
nvme-cli = "*"
